feat(doc): map ws chat route to swagger.
